--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar color="add-item">
-      <ion-title>Expense Tracker</ion-title>          
+      <ion-title>Coin By Coin</ion-title>          
     </ion-toolbar>
   </ion-header>
 
