--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,30 +1,25 @@
 <ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar color="add-item">
-      <ion-title>Coin By Coin</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <ion-content class="mainMenu">
-    <ion-item>
+  <ion-content>
+    <ion-item class="bgd" item-width="120%"  style="padding-left:0%;">
 
       <ion-grid>
         <ion-row>
           <ion-col>
-            <div class="mainPhoto">
+            <div class="profile-photo">
               <img src="{{userProfile.photoURL}}">
             </div>
           </ion-col>
-          <ion-col>
-            <h2 style="margin-top:20%">{{userProfile.displayName}}</h2>
-            <p>{{userProfile.email}}</p>
+          <ion-col>          
+            <h2 style="color: #5a5a59;">{{userProfile.displayName}}</h2>
+            <p style="color:#279c8c;">{{userProfile.email}}</p>
           </ion-col>
         </ion-row>
       </ion-grid>
 
     </ion-item>
 
-    <ion-list class="mainMenu">
+    <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
         <ion-icon name="{{p.icon}}" item-left></ion-icon>
