--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,6 +32,7 @@ $colors: (
   cash:       #07DF4F,
   header:     #6c699c,
   add-item:   #5ec3ab,
+  blue-item: #3c5c95,
   warm-1:#00c4cc,
   warm-2:#fe491a,
   warm-3:#f7b733,
