--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,7 +12,7 @@
           </ion-col>
           <ion-col>          
             <h2 style="color: #5a5a59;">{{userProfile.displayName}}</h2>
-            <p style="color:#279c8c;">{{userProfile.email}}</p>
+            <p style="color:white;">{{userProfile.email}}</p>
           </ion-col>
         </ion-row>
       </ion-grid>
